--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,11 @@
  */
 
  @import "bootstrap";
+
+body{
+    background-color: #F5F6F8;
+}
+
+ my-nav{
+    background-color: #FFFFFF !important;
+ }
