--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>MeuNegocio</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="description" content="Gerenciador de fluxo de caixa">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -13,6 +13,23 @@
   </head>
 
   <body>
-    <%= yield %>
+  <header>
+      <div id="header-wrap">
+        <% if user_signed_in? %>
+          <%= render 'layouts/user_navbar'%>
+        <%else%>
+          <%= render 'layouts/visitor_navbar'%>
+        <%end%>
+      </div>
+    </header>
+    <div class="container">
+      <%= render 'layouts/messages' %>
+      <br>
+      <div class="panel panel-default">
+        <div id="content-fluid" class="panel-body">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
