Alteração na tela de editar Usuario.

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,43 +1,26 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="card">
+<div class="card-header">
+    <h3 class="card-title"><%= resource_name.to_s.humanize %></h3>
   </div>
+  <div class="card-body">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+      <div class="form-inputs">
+        <%= f.input :email, required: true, autofocus: true, hint: ("Currently waiting confirmation for: #{resource.unconfirmed_email}" if (devise_mapping.confirmable? && resource.pending_reconfirmation?)) %>
+        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} caracteres mínimos" if @minimum_password_length), label: 'Senha', placeholder: "Deixe em branco se não deseja alterar" %>
+        <%= f.input :password_confirmation, required: true, label: 'Confirme a senha' %>
+        <%= f.input :current_password, required: true, label: 'Senha atual', hint: 'Precisamos da senha atual para confirmar as mudanças' %>
+        
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      </div>
+      <div class="form-actions">
+        <%= f.button :submit, "Alterar" %>
+        <%= link_to "Voltar", :back, class: 'card-link' %>
+      </div>
     <% end %>
+    <br>
+  <div class="card-footer text-muted">
+    <h3>Cancelar conta</h3>
+    <p>Triste? <%= button_to "Cancelar conta", registration_path(resource_name), data: { confirm: "Tem certeza?" }, method: :delete %></p>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
