Adicionado novas regras de negocio para empresa.

--- a/app/views/layouts/_user_navbar.html.erb
+++ b/app/views/layouts/_user_navbar.html.erb
@@ -13,7 +13,10 @@
     </ul>
     <ul class="navbar-nav">
         <%= content_tag :ul, class: 'navbar-nav mr-auto' do%>
-        <%= content_tag :li, class: 'nav-item dropdown' do%>
+          <li class="nav-item active">
+            <%= content_tag :a, fa_icon('briefcase', text: empresa_selecionada.nome), class: 'nav-link', href: minhas_empresas_path%>
+          </li>
+        <%= content_tag :li, class: 'nav-item dropdown active' do%>
             <%= content_tag :a, fa_icon("user-circle-o", text: current_user.email) , class: 'nav-link dropdown-toggle', 'data-toggle': 'dropdown', href: '#', role: 'button', 'aria-haspopup': 'true', 'aria-expanded': 'false'%>
                 <%=content_tag :div, class: 'dropdown-menu' do %>
                         <%= content_tag :a, 'Editar conta', class: 'dropdown-item', href: edit_user_registration_path %>
