--- a/app/views/minhas_empresas/_minhas_empresas_table.html.erb
+++ b/app/views/minhas_empresas/_minhas_empresas_table.html.erb
@@ -11,11 +11,11 @@
             <td>
                <div class="btn-group btn-group-sm">
                   <%= link_to fa_icon("pencil"), edit_empresa_path(empresa), class: "btn btn-outline-primary btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Alterar' %>
-                  <%= link_to fa_icon("trash"), empresa_path(empresa), method: :delete, "data-confirm": 'Remover cliente?', class: "btn btn-outline-danger btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Remover' %>
+                  <%= link_to fa_icon("sign-out"), minha_empresa_path(empresa), method: :delete, "data-confirm": 'Sair da empresa?', class: "btn btn-outline-danger btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Sair da empresa' %>
+                  <%= remover_admin(empresa)%>
                </div>
             </td>
             <td>
-               <%= empresa.nome %>
                <%= sou_admin empresa %>
             </td>
             <td>
