--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -1,23 +1,65 @@
-<%= simple_form_for  @empresa, defaults: {label_html: {class: 'form-title form'}}, html: {class: 'form-vertical'} do |f| %>
-<%= f.error_notification %>
-     <div class="row">
-            <div class="col-md-12 col-sm-12 col-lg-6">
-                <ul class="form-group list-unstyled">
-                    <li>
-                    <%= f.input :nome, as: :string,input_html: {class: 'form-control' }%>
-                    </li>
-                </ul>
-            </div>
-        </div>    
-
-  <div class="row">
-    <div class="col-md-2">
-      <ul class="list-unstyled">
+<div class="row">
+    <div class="col-md-12 col-sm-12 col-lg-3">
+      <ul class="form-group list-unstyled">
         <li>
-          <%= f.submit 'Salvar', class: 'btn btn-primary card-link'%>
-          <%= link_to 'Voltar', :back, class: 'card-link' %>
+          <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Empresa</a>
+            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Membros</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div class="col-md-12 col-sm-12 col-lg-9">
+      <ul class="form-group list-unstyled">
+        <li>
+          <div class="tab-content" id="v-pills-tabContent">
+            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+              <%= simple_form_for  @empresa, defaults: {label_html: {class: 'form-title form'}}, html: {class: 'form-vertical'} do |f| %>
+                <%= f.error_notification %>
+                    <div class="row">
+                            <div class="col-md-12 col-sm-12 col-lg-6">
+                                <ul class="form-group list-unstyled">
+                                    <li>
+                                    <%= f.input :nome, as: :string,input_html: {class: 'form-control' }%>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>    
+                  <div class="row">
+                    <div class="col-md-12">
+                      <ul class="list-unstyled">
+                        <li>
+                          <%= f.submit 'Salvar', class: 'btn btn-outline-primary card-link'%>
+                          <%= link_to 'Voltar', :back, class: 'card-link' %>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                <% end %>
+            </div>
+            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+              <div id= 'telefones_container'>
+                <div class="page-header">
+                  <h4>
+                    <%= render 'membros', empresa: @empresa%>
+                    
+                  </h4>
+                </div>
+                <br/>
+                <ol>
+                  
+                </ol>
+              </div>
+            </div>
+
+                <br/>
+                <ol>
+                  
+                </ol>
+              </div>
+            </div>
+          </div>
         </li>
       </ul>
     </div>
   </div>
-<% end %>
