--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -7,6 +7,6 @@ sentence.sub! 'alert', 'danger'
 <br>
   <div class="alert alert-<%= sentence %>" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <%= value %>
+    <%= value.html_safe %>
   </div>
 <% end %>
