--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -6,7 +6,8 @@
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
       <div class="form-inputs">
-        <%= f.input :email, required: true, autofocus: true, hint: ("Currently waiting confirmation for: #{resource.unconfirmed_email}" if (devise_mapping.confirmable? && resource.pending_reconfirmation?)) %>
+        <%= f.input :name, label: 'Nome', autofocus: true %>
+        <%= f.input :email, required: true, hint: ("Currently waiting confirmation for: #{resource.unconfirmed_email}" if (devise_mapping.confirmable? && resource.pending_reconfirmation?)) %>
         <%= f.input :password, required: true, hint: ("#{@minimum_password_length} caracteres mínimos" if @minimum_password_length), label: 'Senha', placeholder: "Deixe em branco se não deseja alterar" %>
         <%= f.input :password_confirmation, required: true, label: 'Confirme a senha' %>
         <%= f.input :current_password, required: true, label: 'Senha atual', hint: 'Precisamos da senha atual para confirmar as mudanças' %>
