--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -5,6 +5,7 @@
           <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
             <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Empresa</a>
             <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Membros</a>
+            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Ações</a>
           </div>
         </li>
       </ul>
@@ -42,20 +43,23 @@
                 <div class="page-header">
                   <h4>
                     <%= render 'membros', empresa: @empresa%>
-                    
                   </h4>
                 </div>
-                <br/>
-                <ol>
-                  
-                </ol>
               </div>
             </div>
-
-                <br/>
-                <ol>
-                  
-                </ol>
+            <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+              <div id= 'enderecos_container'>
+                <div class="page-header">
+                  <h4>
+                    <div class="btn-group btn-group">
+                      <%= link_to fa_icon("sign-out", text: 'Sair da empresa'), minha_empresa_path(@empresa), method: :delete, "data-confirm": 'Sair da empresa?', class: "btn btn-outline-danger btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Sair da empresa' %>
+                      <%= remover_admin(@empresa, 'Sair da administração')%>
+                  </div>
+                  </h4>
+                </div>                
+              </div>
+            </div>
+          </div>
               </div>
             </div>
           </div>
