--- a/app/views/empresas/_membros.html.erb
+++ b/app/views/empresas/_membros.html.erb
@@ -1,5 +1,5 @@
 <div class="list-group">
-  <button type="button" class="list-group-item list-group-item-action">Dapibus ac facilisis in</button>
-  <button type="button" class="list-group-item list-group-item-action">Morbi leo risus</button>
-  <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
+  <% membros(empresa).each do |u|%>
+  <%= content_tag :button, create_nome_membro(u, empresa), class: 'list-group-item list-group-item-action' %>
+  <% end %>
 </div>
