ajuste no metods de slecao de empresa.

--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -41,9 +41,7 @@
             <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
               <div id= 'telefones_container'>
                 <div class="page-header">
-                  <h4>
-                    <%= render 'membros', empresa: @empresa%>
-                  </h4>
+                    <%= render 'membros', membros: membros(@empresa), empresa: @empresa%>
                 </div>
               </div>
             </div>
