--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,14 +1,16 @@
-<div class="card">
-  <div class="card-body">
-  <h3 class="card-title text-center">Esqueceu sua senha?</h3>
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+<div class="d-flex justify-content-around">
+  <div class="card">
+    <div class="card-body">
+    <h3 class="card-title text-center">Esqueceu sua senha?</h3>
+  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= f.error_notification %>
+    <div class="form-inputs">
+      <%= f.input :email, required: true, autofocus: true %>
+    </div>
+    <div class="form-actions">
+      <%= f.button :submit, "Me ajude" %>
+    </div>
+  <% end %>
+  <%= render "users/shared/links" %>  </div>
   </div>
-  <div class="form-actions">
-    <%= f.button :submit, "Me ajude" %>
-  </div>
-<% end %>
-<%= render "users/shared/links" %>  </div>
 </div>
