--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,17 +1,19 @@
-<div class="card">
-  <div class="card-body">
-  <h3 class="card-title text-center">Sign up</h3>
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-  <div class="form-inputs">
-    <%= f.input :name, required: true, label: 'Nome', autofocus: true %>
-    <%= f.input :email, required: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} caracteres no mínimo" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+<div class="d-flex justify-content-around">
+  <div class="card">
+    <div class="card-body">
+    <h3 class="card-title text-center">Sign up</h3>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
+    <div class="form-inputs">
+      <%= f.input :name, required: true, label: 'Nome', autofocus: true %>
+      <%= f.input :email, required: true %>
+      <%= f.input :password, required: true, hint: ("#{@minimum_password_length} caracteres no mínimo" if @minimum_password_length) %>
+      <%= f.input :password_confirmation, required: true %>
+    </div>
+    <div class="form-actions">
+      <%= f.button :submit, "Sign up" %>
+    </div>
+  <% end %>
+  <%= render "users/shared/links" %>
   </div>
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-<%= render "users/shared/links" %>
 </div>
