--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,8 +1,7 @@
 <div class="card">
-<div class="card-header">
-    <h3 class="card-title"><%= resource_name.to_s.humanize %></h3>
-  </div>
   <div class="card-body">
+  <h3 class="card-title"><%= resource_name.to_s.humanize %></h3>
+    <hr>
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
       <div class="form-inputs">
@@ -20,8 +19,10 @@
       </div>
     <% end %>
     <br>
+    <!--
   <div class="card-footer text-muted">
     <h3>Cancelar conta</h3>
-    <p>Triste? <%= button_to "Cancelar conta", registration_path(resource_name), data: { confirm: "Tem certeza?" }, method: :delete %></p>
+    <p>Tá triste? <%= button_to "Cancelar conta", registration_path(resource_name), data: { confirm: "Tem certeza?" }, method: :delete %></p>
   </div>
+  -->
 </div>
