Adicionado crud de produtos.

--- a/app/views/layouts/_user_navbar.html.erb
+++ b/app/views/layouts/_user_navbar.html.erb
@@ -10,6 +10,9 @@
       <li class="nav-item active">
         <%= content_tag :a, 'Clientes', class: 'nav-link', href: clientes_path%>
       </li>
+      <li class="nav-item active">
+        <%= content_tag :a, 'Produtos', class: 'nav-link', href: produtos_path%>
+      </li>
     </ul>
     <ul class="navbar-nav">
 
