Adicionado crud de serviços.

--- a/app/views/layouts/_user_navbar.html.erb
+++ b/app/views/layouts/_user_navbar.html.erb
@@ -13,6 +13,9 @@
       <li class="nav-item active">
         <%= content_tag :a, 'Produtos', class: 'nav-link', href: produtos_path%>
       </li>
+      <li class="nav-item active">
+        <%= content_tag :a, 'Serviços', class: 'nav-link', href: servicos_path%>
+      </li>
     </ul>
     <ul class="navbar-nav">
 
