--- a/app/views/produtos/_produtos_table.html.erb
+++ b/app/views/produtos/_produtos_table.html.erb
@@ -1,4 +1,4 @@
-<div id="clientes_table">
+<div id="produtos_table">
    <table class="table table-striped" >
       <thead>
          <th scope="col"></th>
