Iniciado implementacao do crud de vendas.

--- a/app/views/layouts/_user_navbar.html.erb
+++ b/app/views/layouts/_user_navbar.html.erb
@@ -16,6 +16,9 @@
       <li class="nav-item active">
         <%= content_tag :a, 'Serviços', class: 'nav-link', href: servicos_path%>
       </li>
+      <li class="nav-item active">
+        <%= content_tag :a, 'Vendas', class: 'nav-link', href: vendas_path%>
+      </li>
     </ul>
     <ul class="navbar-nav">
 
