--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -5,7 +5,7 @@
     sentence.sub! 'alert', 'danger'
   %>
   <br>
-    <div class="alert alert-<%= sentence %> alert-dismissible fade show" role="alert">
+    <div class="alert alert-<%= sentence %> alert-dismissible fade show mb-0" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       <%= value.html_safe %>
     </div>
