--- a/app/views/servicos/_form.html.erb
+++ b/app/views/servicos/_form.html.erb
@@ -24,7 +24,7 @@
     <div class="col-md-2">
       <ul class="list-unstyled">
         <li>
-          <%= f.submit 'Salvar', class: 'btn btn-outline-primary card-link'%>
+          <%= f.submit 'Salvar', class: 'btn btn-primary card-link'%>
           <%= link_to 'Voltar', :back, class: 'card-link' %>
         </li>
       </ul>
