--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,9 @@
 
  @import "bootstrap";
  @import "font-awesome";
- @import "login";
+ @import "shards-dashboards.1.1.0.min";
+ @import "extras.1.1.0.min";
+ @import "shards-dashboards.1.1.0";
 
 body{
     background-color: #F5F6F8;
