--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,10 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'https://fonts.googleapis.com/icon?family=Material+Icons', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'https://use.fontawesome.com/releases/v5.0.6/css/all.css', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'https://buttons.github.io/buttons.js', :defer => "defer", :async => 'async' %>
+    
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="description" content="Gerenciador de fluxo de caixa">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -12,23 +16,31 @@
     <meta name="theme-color" content="#A9A9A9">
   </head>
 
-  <body>
-  <header>
-      <div id="header-wrap">
-        <% if user_signed_in? %>
-          <%= render 'layouts/user_navbar'%>
-        <%end%>
-      </div>
-    </header>
-    <div class="container">
-      <%= render 'layouts/messages' %>
-      <br>
-      <div class="panel panel-default">
-        <div id="content-fluid" class="panel-body">
-          <%= yield %>
-        </div>
+  <body class="h-100">
+    <div class="container-fluid">
+      <div class="row">
+        <!-- Main Sidebar -->
+        <%= render 'layouts/sidebar'%>        
+        
+        <main class="main-content col-lg-10 col-md-9 col-sm-12 p-0 offset-lg-2 offset-md-3">
+        <!-- Main Navbar -->
+          <%= render 'layouts/navbar'%>
+          <%= render 'layouts/messages' %>
+          <div class="main-content-container container-fluid px-4">
+             <%= yield %>
+            </div>
+        </main>
       </div>
     </div>
-    <br>
+    
+    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js' %>
+    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js' %>
+    <%= javascript_include_tag 'https://unpkg.com/shards-ui@latest/dist/js/shards.min.js' %>
+    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js' %>
+    <%= javascript_include_tag 'extras.1.1.0.min' %>
+    <%= javascript_include_tag 'shards-dashboards.1.1.0.min' %>
+    <%= javascript_include_tag 'app/app-blog-overview.1.1.0' %>
+    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.6/quill.min.js' %>
+    
   </body>
 </html>
