--- a/app/views/produtos/_produtos_table.html.erb
+++ b/app/views/produtos/_produtos_table.html.erb
@@ -11,8 +11,8 @@
          <tr>
             <td>
                <div class="btn-group btn-group-sm">
-                  <%= link_to fa_icon("pencil"), edit_produto_path(produto), class: "btn btn-outline-primary btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Alterar' %>
-                  <%= link_to fa_icon("trash"), produto_path(produto), method: :delete, "data-confirm": 'Remover produto?', class: "btn btn-outline-danger btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Remover' %>
+                  <%= link_to content_tag(:i, 'edit', class: 'material-icons'), edit_produto_path(produto), class: "btn btn-outline-primary btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Alterar' %>
+                  <%= link_to content_tag(:i, 'delete', class: 'material-icons'), produto_path(produto), method: :delete, "data-confirm": 'Remover produto?', class: "btn btn-outline-danger btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Remover' %>
                </div>
             </td>
             <td>
