--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -1,7 +1,12 @@
+   <div class="page-header row no-gutters py-4">
+      <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
+         <span class="text-uppercase page-subtitle">Produtos</span>
+         <h3 class="page-title">Adicionar Produto</h3>
+      </div>
+   </div>
+
 <div class="card">
   <div class="card-body">
-    <h3 class="card-title">Novo Produto</h3>
-    <hr>
     <%= render 'form' %>
   </div>
 </div>
