--- a/app/views/servicos/index.html.erb
+++ b/app/views/servicos/index.html.erb
@@ -1,8 +1,12 @@
+ <div class="page-header row no-gutters py-4">
+      <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
+         <h3 class="page-title">Serviços</h3>
+      </div>
+   </div>
+
 <div class="card">
   <div class="card-body">
-    <h3 class="card-title">Serviços</h3>
-    <hr>
-<%= link_to( 'Novo', new_servico_path , class: "btn btn-outline-primary") %>
+<%= link_to( 'Novo', new_servico_path , class: "btn btn-primary") %>
 <br>
 <br>
 <div id="div_servicos_table">
