--- a/app/views/minhas_empresas/index.html.erb
+++ b/app/views/minhas_empresas/index.html.erb
@@ -1,7 +1,9 @@
+<div class="page-header">
+  <h1 class="page-title">Minhas Empresas
+  </h1>
+</div>
 <div class="card">
   <div class="card-body">
-    <h3 class="card-title">Minhas Empresas</h3>
-    <hr>
 <%= link_to( 'Novo', new_minha_empresa_path , class: "btn btn-outline-primary") %>
 <br>
 <br>
