--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,7 +1,9 @@
+<div class="page-header">
+  <h1 class="page-title">Produtos 
+  </h1>
+</div>
 <div class="card">
   <div class="card-body">
-    <h3 class="card-title">Produtos</h3>
-    <hr>
 <%= link_to( 'Novo', new_produto_path , class: "btn btn-outline-primary") %>
 <br>
 <br>
