--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,8 +1,10 @@
-<div class="card">
+<div class="page-header">
+  <h1 class="page-title">Alterar Cliente 
+		<small><%= @cliente.nome%></small>
+  </h1>
+  </div>
+  <div class="card">
   <div class="card-body">
-    <h3 class="card-title">Alterar Cliente</h3>
-    <%= content_tag :h6, @cliente.nome, class: 'card-subtitle mb-2 text-muted' %>
-    <hr>
     <%= render 'form' %>
   </div>
 </div>
