--- a/app/views/servicos/edit.html.erb
+++ b/app/views/servicos/edit.html.erb
@@ -1,8 +1,11 @@
+<div class="page-header">
+  <h1 class="page-title">Alterar Serviço 
+		<small><%= @servico.nome%></small>
+  </h1>
+</div>
+
 <div class="card">
   <div class="card-body">
-    <h3 class="card-title">Alterar Serviço</h3>
-    <%= content_tag :h6, @servico.nome, class: 'card-subtitle mb-2 text-muted' %>
-    <hr>
     <%= render 'form' %>
   </div>
 </div>
