--- a/app/views/servicos/new.html.erb
+++ b/app/views/servicos/new.html.erb
@@ -1,7 +1,9 @@
+<div class="page-header">
+  <h1 class="page-title">Novo Serviço
+  </h1>
+</div>
 <div class="card">
   <div class="card-body">
-    <h3 class="card-title">Novo Serviço</h3>
-    <hr>
     <%= render 'form' %>
   </div>
 </div>
