--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,7 +1,9 @@
 <div class="d-flex justify-content-around">
-  <div class="card">
-    <div class="card-body">
+  <div class="card login">
+  <div class="card-header">
     <h3 class="card-title text-center">Enviar instruções de confirmação</h3>
+  </div>
+    <div class="card-body">
   <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
     <%= f.error_notification %>
     <%= f.full_error :confirmation_token %>
