--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,7 +1,9 @@
 <div class="d-flex justify-content-around">
-  <div class="card">
+  <div class="card login">
+  <div class="card-header">
+    <h3 class="card-title">Esqueceu sua senha?</h3>
+  </div>
     <div class="card-body">
-    <h3 class="card-title text-center">Esqueceu sua senha?</h3>
   <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= f.error_notification %>
     <div class="form-inputs">
