--- a/app/views/vendas/index.html.erb
+++ b/app/views/vendas/index.html.erb
@@ -1,7 +1,10 @@
+<div class="page-header">
+  <h1 class="page-title">Vendas
+  </h1>
+</div>
 <div class="card">
   <div class="card-body">
-    <h3 class="card-title">Vendas</h3>
-    <hr>
+    
 <%= link_to( 'Novo', new_venda_path , class: "btn btn-outline-primary") %>
 <br>
 <br>
