Correções de layout.

--- a/app/views/empresas/_membros.html.erb
+++ b/app/views/empresas/_membros.html.erb
@@ -1,5 +1,4 @@
-<%= simple_form_for  empresa, action: "add_refeicao", url: add_membro_empresas_path, remote: true, :method => :put  do |f|%>
-<div class="row">
+<%= simple_form_for  empresa, action: "add_refeicao", url: add_membro_empresas_path, remote: true, :method => :put  do |f|%><div class="row">
 <div class="row">
   <div class="col-12 ">
     <div id="div_notice"></div>
@@ -30,7 +29,7 @@
 </div>
 </div>
 </div>
+</div>
 <br>
-<div>
           
 <%end%>
