--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,7 +1,8 @@
+<div class="page-header">
+  <h1 class="page-title">Usuário
+  </h1>
+</div>
 <div class="card">
- <div class="card-header">
-    <h3 class="card-title"><%= resource_name.to_s.humanize %></h3>
-    </div>
   <div class="card-body">
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
